--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: My Technical Scribbles
+subtitle: This is where I put technical memos about what I have learned these days
 use-site-title: true
 ---
 
